# aivoice-vox

./: .gitignore  Cargo.toml  README.md  build.ps1  build.rs  engine_manifest.json
.github/workflows/: check.yml
src/: aivoice.rs  bridge.rs  error.rs  icon_manager.rs  main.rs  settings_modifier.rs
src/cpp/: bridge.cpp
src/routes/: audio_query.rs  info.rs  mod.rs  speakers.rs  synthesis.rs  user_dict.rs
src/voicevox/: README.md  acoustic_feature_extractor.rs  full_context_label.rs  mod.rs  model.rs  mora_list.rs  open_jtalk.rs
src/voicevox/user_dict/: dict.rs  part_of_speech_data.rs  word.rs
